@@ -399,6 +399,41 @@ could not be loaded completely. The value is in kB.
 </varlistentry>
 
 <varlistentry condition="gtk">
+<term>mouse/protocol</term>
+<listitem><para>
+
+For the gtk frontend (graphical installer), users can set the mouse
+protocol to be used by setting this parameter.
+Supported values are<footnote>
+
+<para>
+See the man page for
+<citerefentry><refentrytitle>directfbrc</refentrytitle>
+<manvolnum>5</manvolnum></citerefentry> for additional information.
+</para>
+
+</footnote>:
+<userinput>PS/2</userinput>, <userinput>IMPS/2</userinput>,
+<userinput>MS</userinput>, <userinput>MS3</userinput>,
+<userinput>MouseMan</userinput> and <userinput>MouseSystems</userinput>.
+In most cases the default protocol should work correctly.
+
+</para></listitem>
+</varlistentry>
+
+<varlistentry condition="gtk">
+<term>mouse/device</term>
+<listitem><para>
+
+For the gtk frontend (graphical installer), users can specify the mouse
+device to be used by setting this parameter. This is mostly useful if the
+mouse is connected to a serial port (serial mouse). Example:
+<userinput>mouse/device=<replaceable>/dev/ttyS1</replaceable></userinput>.
+
+</para></listitem>
+</varlistentry>
+
+<varlistentry condition="gtk">
 <term>mouse/left</term>
 <listitem><para>
 
