@@ -20,11 +20,13 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   * Warn about boot issues when using RAID on the root file system.
   * Update task selection section for changes in desktop task preseeding.
   * Fix double / in links, spotted by Stanislav Gromov. Closes: #472813.
+  * Document new boot parameters to define mouse protocol and device (port)
+    for the graphical installer.
 
   [ Joey Hess ]
   * Remove autopartkit from the module list.
 
- -- Frans Pop <fjp@debian.org>  Thu, 27 Mar 2008 00:44:19 +0100
+ -- Frans Pop <fjp@debian.org>  Sat, 19 Apr 2008 14:53:10 +0200
 
 installation-guide (20080211) unstable; urgency=low
 
